<resources>
    <string name="app_name">Medical Conferences</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="signin_msg">You need sign in to use app</string>
    <string name="signin_google_title">SignIn use with Google account</string>
    <string name="signingin">Signing in</string>
    <string name="signout">Sign Out</string>
    <string name="admin_page">Admin Page</string>
    <string name="users">Users</string>
    <string name="conferences">Conferences</string>
    <string name="your_conferences">Your Conferences</string>
    <string name="tab_topics">Topics</string>
    <string name="tab_participants">Participants</string>
    <string name="tab_topics_request">Requested Topics</string>
    <string name="input_user_title">Enter user\'s mail</string>
    <string name="save">Save</string>
</resources>
